examples/test/testpolicy11652.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11652
  namespace: namespace20
spec:
  podSelector:
    matchLabels:
      key26: value6
      key11: value28
      key38: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value3
      podSelector:
        matchLabels:
          key15: value26
          key34: value3
          key17: value29
